saldo en textarea

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <p id="sugerencia">Sugerencias, errores escribeme x workPlace: <a href="https://directv.workplace.com/chat/t/100001212809222" target="_blank"> Fernando Cifuentes Obonaga</a> </p>
       </div>
       <div class="c7">
-        <textarea id="texto" placeholder="Selecciona texto, dale click en copy y pega en tu contacto ;-)" ></textarea>
+        <textarea id="texto" placeholder="Selecciona texto, dale click en copy y pega en tu contacto ;-)" name="text"  ></textarea>
         <!-- <button id="boton">Copy</button><br> -->
         <p>
            <a href="#" id="boton">Copy</a>
@@ -150,7 +150,7 @@
         <input id="rvp06" type="checkbox" name="rvp06" value="HotPAck "><label class="rvp" for="rvp06">HotPack</label><br>
         <input id="rvp07" type="checkbox" name="rvp07" value="Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses." ><label class="rvo" for="rvp07" >Quiero quiero renovar promociones, acepta ofertas retepremium 50% x 4 meses</label><br>
         <label for="" class="tituloCopy">Factura</label><br>
-        <!-- <input id="fac" type="checkbox" name="fac" value="total a pagar "><label class="rvp" for="fac">Total a pagar</label> -->
+        <input id="fac0" type="checkbox" name="fac0" value="total a pagar "><label for="fac0">Total a pagar</label><br>
         <input id="fac" type="checkbox" name="fac" value="Porque incremento el precio de la boleta, se informa aumento de precios. "><label class="rvp" for="fac">Porque incremento el precio de la boleta, se informa aumento de precios</label>
         <input id="fac1" type="checkbox" name="fac1" value="Acepta $2000. "><label class="rvp" for="fac1">Acepta $2000</label>
         <input id="fac2" type="checkbox" name="fac2" value="Se reclama x back office. "><label class="rvp" for="fac2">Se reclama x back office</label>
@@ -190,7 +190,7 @@
         <input id="tst3" type="checkbox" name="tst3" value="Me aparece codigo 771, se realizan pruebas, se soluciona "><label class="rvo" for="tst3">Me aparece codigo 771, se realizan pruebas, se soluciona</label><br>
         <input id="tst4" type="checkbox" name="tst4" value="Me aparece codigo 721/722, se envian comandos se soluciona, se informan medios de autogestion. "><label class="rvo" for="tst4">Me aparece codigo 721/722, se envian comandos se soluciona, se informan medios de autogestion</label><br>
         <input id="tst5" type="checkbox" name="tst5" value="Se pasa Work Orden a csr 1, se reporta por chat. "><label class="rvo" for="tst5">Se pasa Work Orden a csr 1, se reporta por chat</label><br>
-        <input id="tst6" type="checkbox" name="tst6" value="Necesito un control remoto, se envia a domicilo. "><label class="rvo" for="tst6">Necesito un control remoto, se envia a domicilo</label><br>
+        <input id="tst6" type="checkbox" name="tst6" value="Necesito un control remoto, se envia a domicilo/agencia. "><label class="rvo" for="tst6">Necesito un control remoto, se envia a domicilo/agencia</label><br>
         <input id="tst7" type="checkbox" name="tst7" value="Necesito un configurar control remoto, se configura con exito. "><label class="rvo" for="tst7">Necesito un configurar control remoto, se configura con exito</label><br>
         <input id="tst8" type="checkbox" name="tst8" value="Quiero cambiar deco/antena de lugar, se genera orden. "><label class="rvo" for="tst8">Quiero cambiar deco/antena de lugar, se genera orden.</label>
         <input id="tst9" type="checkbox" name="tst9" value="Se confirma cobro en proxima boleta de $15.990. "><label class="rvo" for="tst9">Se confirma cobro en proxima boleta de $15.990</label><br>
