css se agrandra espacio para que se vean premium proporcional

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       <input id="tnthdp" type="checkbox" name="premium2p" value="395"><label class="rvpValor" for="tnthdp">TntHD</label>
       <input id="foxp" type="checkbox" name="premium3p" value="348"><label class="rvpValor" for="foxp">FoxSport</label>
       <input id="combop" type="checkbox" name="premium4p" value="350"><label class="rvpValor" for="combop">Combo</label>
-      <input id="starp" type="checkbox" name="premium5p" value="283"><label class="rvpValor" for="starp">Star+</label>
-      <input id="disneyp" type="checkbox" name="premium6p" value="216"><label class="rvpValor" for="disneyp">Disney+</label>
+      <input id="starp" type="checkbox" name="premium5p" value="283"><label class="rvpValor" for="starp">Star</label>
+      <input id="disneyp" type="checkbox" name="premium6p" value="216"><label class="rvpValor" for="disneyp">Disney</label>
       <label>Ciclo</label>
       <input id="c1" type="radio" name="ciclo" value="1" ><label for="c1">1-30</label>
       <input id="c4" type="radio" name="ciclo" value="4" ><label for="c4">4-3</label>
