actualiza hcOctubre y me compra programacio premium

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <p>
           <a href="https://directv.workplace.com/work/landing/input/" class="enlace" target="_blank">WorkPlace </a><a href="https://psmfsa-oci.dtvpan.com/PSM/NUI/#/login" class="enlace" target="_blank">Icx </a><a href="http://clsatvisorf5prd-oci.dtvpan.com/AW025_NewVisor/" class="enlace" target="_blank">Visor </a><a href="https://dtvweb-cl.dtvpan.com/" class="enlace" target="_blank">Sds </a><a href="https://wfo15.dtvpan.com/wfo/control/signin" class="enlace" target="_blank">Verint </a><a href="https://egky.fa.us6.oraclecloud.com/" class="enlace" target="_blank">Integra </a>
           <a href="https://www.directv.cl" class="enlace" target="_blank">Directv </a>
-          <a href="hcAgosto.ods" class="enlace"  download="HcAgosto.ods">hcAgosto</a> 
+          <a href="hcAgosto.ods" class="enlace"  download="HcOctubre.ods">hcOctubre</a> 
           <a href="https://outlook.office.com/mail/" class="enlace" target="_blank">Email VPN </a> 
           
          
@@ -209,7 +209,7 @@
         <input id="pro" type="checkbox" name="pro" value="Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro">Quiero activar el canal Tnt, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro1" type="checkbox" name="pro1" value="Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura. "><label class="rvo" for="pro1">Quiero activar el canal FoxSport, acepta proporcional mas el mes completo en siguiente factura</label><br>
         <input id="pro2" type="checkbox" name="pro2" value="Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata"><label class="rvp" for="pro2">Acepta cambio de plan plata a oro con oferta por 3 meses pagando plan plata</label><br>
-        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free octubre siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free octubre siguientes 2 meses al 50%, activa:</label>
+        <input id="pro3" type="checkbox" name="pro3" value="Acepta programacion premium free noviembre siguientes 2 meses al 50%, activa: "><label class="rvp" for="pro3">Acepta programacion premium free noviembre siguientes 2 meses al 50%, activa:</label>
         <input id="pro4" type="checkbox" name="pro4" value="Hbo "><label class="rvp" for="pro4">Hbo</label>
         <input id="pro5" type="checkbox" name="pro5" value="Universal "><label class="rvp" for="pro5">Universal</label>
         <input id="pro6" type="checkbox" name="pro6" value="Hot Pack "><label class="rvp" for="pro6">Hot Pack</label><br>
