planes combo plus

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <input id="poroplus" type="radio" name="plan" value="38820"><label for="poroplus">Plan Oro Plus HD</label> <br>
     <input id="oro4k" type="radio" name="plan" value="43260"><label for="oro4k">Plan Oro 4K</label> <br>
     <input id="broncelite" type="radio" name="plan" value="21610"><label for="broncelite">Plan Bronce Lite</label> <br>
-    <input id="broncehdn" type="radio" name="plan" value="19990"><label for="broncehdn">Plan Bronce HD</label>
+    <input id="broncehdn" type="radio" name="plan" value="19990"><label for="broncehdn">Plan Bronce HD</label><br>
+    <input id="platacombo" type="radio" name="plan" value="31940"><label for="platacombo">Plan Plata Combo Plus</label> <br>
+    <input id="orocombo" type="radio" name="plan" value="36050"><label for="orocombo">Plan Oro Combo Plus</label>
     </div>  
     <div class="c2">
     <h4 class="cartera">Clientes Cartera</h4>
@@ -127,8 +129,8 @@
       <input id="extra" type="text" name="Extra" value="" class="Extra"><label for="Extra">Ingresa un cargo adicional </label><br>
 
       <label>Proporcional Activacion Premium:</label><br>
-      <input id="tntp" type="checkbox" name="premium1p" value="305"><label class="rvpValor" for="tntp">Tnt</label>
-      <input id="tnthdp" type="checkbox" name="premium2p" value="395"><label class="rvpValor" for="tnthdp">TntHD</label>
+      <input id="tntp" type="checkbox" name="premium1p" value="327"><label class="rvpValor" for="tntp">Tnt</label>
+      <input id="tnthdp" type="checkbox" name="premium2p" value="423"><label class="rvpValor" for="tnthdp">TntHD</label>
       <input id="foxp" type="checkbox" name="premium3p" value="348"><label class="rvpValor" for="foxp">FoxSport</label>
       <input id="combop" type="checkbox" name="premium4p" value="350"><label class="rvpValor" for="combop">Combo+</label>
       <input id="starp" type="checkbox" name="premium5p" value="283"><label class="rvpValor" for="starp">Star+</label>
