--- a/index.html
+++ b/index.html
@@ -77,27 +77,31 @@
       <div class="c4">
         <h4 class="premium">Paquetes Premium</h4>
         <hr class="premium">
-        <input id="tnt" type="checkbox" name="premium1" value="9800"><label class="rvpValor" for="tnt">Tnt $9.800---------></label>
-        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4900"><label class="rvpEspacio" for="rvp1">50%</label><br>
-        <input id="tntv" type="checkbox" name="premium2" value="8300"><label for="tntv">Tnt $8.300---------></label>
-        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4150"><label class="rvpEspacio" for="rvp2">50%</label> <br>   
-        <input id="tnthd" type="checkbox" name="premium3" value="12700"><label for="tnthd">Tnt HD $12.700--></label>
-        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-6350"><label class="rvpEspacio" for="rvp3">50%</label> <br>
-        <input id="hbo" type="checkbox" name="premium4" value="8300"><label for="hbo">Hbo-----------------></label>
-        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-4150"><label class="rvpEspacio" for="rvp4">50%</label> <br>
-        <input id="universal" type="checkbox" name="premium6" value="8300"><label for="universal">Universal----------></label> 
-        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-4150"><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input id="tnt" type="checkbox" name="premium1" value="8300"><label class="rvpValor" for="tnt">Tnt $8.300---------></label>
+        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4150"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="tnta" type="checkbox" name="premium2" value="9150"><label class="rvpValor" for="tnta">Tnt $9.150---------></label>
+        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4575"><label class="rvpEspacio" for="rvp2">50%</label><br>
+        <input id="tntv" type="checkbox" name="premium3" value="9800"><label for="tntv">Tnt $9.800---------></label>
+        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-4900"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
+        <input id="tnthd" type="checkbox" name="premium4" value="11850"><label for="tnthd">Tnt HD $11.850--></label>
+        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-5925"><label class="rvpEspacio" for="rvp4">50%</label> <br>
+        <input id="tnthdn" type="checkbox" name="premium5" value="12700"><label for="tnthdn">Tnt HD $12.700--></label>
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-6350"><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input id="hbo" type="checkbox" name="premium6" value="8300"><label for="hbo">Hbo-----------------></label>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4150"><label class="rvpEspacio" for="rvp6">50%</label> <br>
+        <input id="universal" type="checkbox" name="premium7" value="8300"><label for="universal">Universal----------></label> 
+        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4150"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label><br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
         <input id="foxsport" type="checkbox" name="premium11" value="10450"><label for="foxsport">Fox Sport----------></label>
-        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-5225"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <input id="hotpack" type="checkbox" name="premium13" value="9050"><label for="hotpack">Hot Pack-----------></label>
-        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4525"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium14" value="9050"><label for="exxotico">Exxotico-----------></label>
-        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-4525"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="full" type="checkbox" name="premium15" value="1610"><label for="full">Full Service-------></label>
-        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-805"><label class="rvpEspacio" for="rvp9">50%</label> <br>
+        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-5225"><label class="rvpEspacio" for="rvp8">50%</label> <br>
+        <input id="hotpack" type="checkbox" name="premium12" value="9050"><label for="hotpack">Hot Pack-----------></label>
+        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-4525"><label class="rvpEspacio" for="rvp9">50%</label> <br>
+        <input id="exxotico" type="checkbox" name="premium13" value="9050"><label for="exxotico">Exxotico-----------></label>
+        <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4525"><label class="rvpEspacio" for="rvp10">50%</label> <br>
+        <input id="full" type="checkbox" name="premium14" value="1610"><label for="full">Full Service-------></label>
+        <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-805"><label class="rvpEspacio" for="rvp11">50%</label> <br>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
