--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
     <input id="rvo11" type="radio" name="rvo" value="-12000"><label for="rvo11">$12.000</label><br>
     <input id="rvo12" type="radio" name="rvo" value="-14000"><label for="rvo12">$14.000</label><br>
     <input id="rvo13" type="radio" name="rvo" value="-16000"><label for="rvo13">$16.000</label><br>
+    <input id="rvo15" type="radio" name="rvo" value="-22000"><label for="rvo15">$22.000</label><br>
     <input id="rvo14" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo14">50% deco Adicional</label><br>
-    <input id="rvo15" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo15">Ingresa un descuento</label>
+    <input id="rvo16" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo16">Ingresa un descuento</label>
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
