--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4150"><label class="rvpEspacio" for="rvp6">50%</label> <br>
         <input id="universal" type="checkbox" name="premium7" value="8300"><label for="universal">Universal----------></label> 
         <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4150"><label class="rvpEspacio" for="rvp7">50%</label> <br>
+        <input id="Paramount" type="checkbox" name="premium15" value="3199"><label for="Paramount">Paramount+</label> <br>
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label><br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
