--- a/index.html
+++ b/index.html
@@ -41,68 +41,68 @@
     <h4 class="nuevos">Clientes Nuevos</h4>
     <hr class="nuevos">
     
-    <input id="pplatahd" type="radio" name="plan" value="28940" accesskey="p"><label for="pplatahd">Plan Plata HD</label> <br>
-    <input id="porohd" type="radio" name="plan" value="34050" accesskey="o"><label for="porohd">Plan Oro HD</label> <br>
-    <input id="poroplus" type="radio" name="plan" value="38820"><label for="poroplus">Plan Oro Plus HD</label> <br>
-    <input id="oro4k" type="radio" name="plan" value="43260"><label for="oro4k">Plan Oro 4K</label> <br>
-    <input id="broncelite" type="radio" name="plan" value="21610"><label for="broncelite">Plan Bronce Lite</label> <br>
-    <input id="broncehdn" type="radio" name="plan" value="19990"><label for="broncehdn">Plan Bronce HD</label><br>
-    <input id="platacombo" type="radio" name="plan" value="31940"><label for="platacombo">Plan Plata Combo Plus</label> <br>
-    <input id="orocombo" type="radio" name="plan" value="36050"><label for="orocombo">Plan Oro Combo Plus</label>
+    <input id="pplatahd" type="radio" name="plan" value="31250" accesskey="p"><label for="pplatahd">Plan Plata HD</label> <br>
+    <input id="porohd" type="radio" name="plan" value="36770" accesskey="o"><label for="porohd">Plan Oro HD</label> <br>
+    <input id="poroplus" type="radio" name="plan" value="41920"><label for="poroplus">Plan Oro Plus HD</label> <br>
+    <input id="oro4k" type="radio" name="plan" value="46720"><label for="oro4k">Plan Oro 4K</label> <br>
+    <input id="broncelite" type="radio" name="plan" value="23330"><label for="broncelite">Plan Bronce Lite</label> <br>
+    <input id="broncehdn" type="radio" name="plan" value="21580"><label for="broncehdn">Plan Bronce HD</label><br>
+    <input id="platacombo" type="radio" name="plan" value="34490"><label for="platacombo">Plan Plata Combo Plus</label> <br>
+    <input id="orocombo" type="radio" name="plan" value="38930"><label for="orocombo">Plan Oro Combo Plus</label>
     </div>  
     <div class="c2">
     <h4 class="cartera">Clientes Cartera</h4>
     <hr class="cartera">
-    <input id="bronce" type="radio" name="plan" value="26170"><label for="bronce">Pack Bronce</label> <br>
-    <input id="broncehd" type="radio" name="plan" value="28940"><label for="broncehd">Pack Bronce HD</label> <br>
-    <input id="plata" type="radio" name="plan" value="34470"><label for="plata" >Pack Plata</label> <br>
-    <input id="platahd" type="radio" name="plan" value="37240"><label for="platahd">Pack Plata HD</label> <br> 
-    <input id="orosd" type="radio" name="plan" value="39580"><label for="orosd">Pack Oro</label> <br>
-    <input id="orohd" type="radio" name="plan" value="42350"><label for="orohd">Pack Oro HD</label> <br>
-    <input id="oroplus" type="radio" name="plan" value="43220"><label for="oroplus">Pack Oro Plus</label> <br>
-    <input id="oroplushd" type="radio" name="plan" value="46570"><label for="oroplushd">Plack Oro Plus Hd</label>
+    <input id="bronce" type="radio" name="plan" value="28260"><label for="bronce">Pack Bronce</label> <br>
+    <input id="broncehd" type="radio" name="plan" value="31250"><label for="broncehd">Pack Bronce HD</label> <br>
+    <input id="plata" type="radio" name="plan" value="37220"><label for="plata" >Pack Plata</label> <br>
+    <input id="platahd" type="radio" name="plan" value="40210"><label for="platahd">Pack Plata HD</label> <br> 
+    <input id="orosd" type="radio" name="plan" value="42740"><label for="orosd">Pack Oro</label> <br>
+    <input id="orohd" type="radio" name="plan" value="45730"><label for="orohd">Pack Oro HD</label> <br>
+    <input id="oroplus" type="radio" name="plan" value="46670"><label for="oroplus">Pack Oro Plus</label> <br>
+    <input id="oroplushd" type="radio" name="plan" value="50290"><label for="oroplushd">Plack Oro Plus Hd</label>
     </div>  
    
     <div class="c3">
       <h4 class="decos">Total de decos</h4>
       <hr class="decos">
       <input id="2" type="radio" name="equipos" value="0" ><label for="2">2 decos</label><br>
-      <input id="3" type="radio" name="equipos" value="4100" ><label for="3">3 decos</label><br>
-      <input id="4" type="radio" name="equipos" value="8200"><label for="4">4 decos</label><br>
-      <input id="5" type="radio" name="equipos" value="12300"><label for="5">5 decos</label><br>
-      <input id="6" type="radio" name="equipos" value="16400"><label for="6">6 decos</label><br>
-      <input id="7" type="radio" name="equipos" value="20500"><label for="7">7 decos</label><br>
-      <input id="8" type="radio" name="equipos" value="24600"><label for="8">8 decos</label>
+      <input id="3" type="radio" name="equipos" value="4420" ><label for="3">3 decos</label><br>
+      <input id="4" type="radio" name="equipos" value="8840"><label for="4">4 decos</label><br>
+      <input id="5" type="radio" name="equipos" value="13260"><label for="5">5 decos</label><br>
+      <input id="6" type="radio" name="equipos" value="17680"><label for="6">6 decos</label><br>
+      <input id="7" type="radio" name="equipos" value="22100"><label for="7">7 decos</label><br>
+      <input id="8" type="radio" name="equipos" value="26520"><label for="8">8 decos</label>
       </div>
       <div class="c4">
         <h4 class="premium">Paquetes Premium</h4>
         <hr class="premium">
-        <input id="tnt" type="checkbox" name="premium1" value="8300"><label class="rvpValor" for="tnt">Tnt $8.300---------></label>
-        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4150"><label class="rvpEspacio" for="rvp1">50%</label><br>
-        <input id="tnta" type="checkbox" name="premium2" value="9150"><label class="rvpValor" for="tnta">Tnt $9.150---------></label>
-        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4575"><label class="rvpEspacio" for="rvp2">50%</label><br>
-        <input id="tntv" type="checkbox" name="premium3" value="9800"><label for="tntv">Tnt $9.800---------></label>
-        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-4900"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
-        <input id="tnthd" type="checkbox" name="premium4" value="11850"><label for="tnthd">Tnt HD $11.850--></label>
-        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-5925"><label class="rvpEspacio" for="rvp4">50%</label> <br>
-        <input id="tnthdn" type="checkbox" name="premium5" value="12700"><label for="tnthdn">Tnt HD $12.700--></label>
-        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-6350"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="hbo" type="checkbox" name="premium6" value="8300"><label for="hbo">Hbo-----------------></label>
-        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4150"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <input id="universal" type="checkbox" name="premium7" value="8300"><label for="universal">Universal----------></label> 
-        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4150"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="Paramount" type="checkbox" name="premium15" value="3199"><label for="Paramount">Paramount+</label> <br>
+        <input id="tnt" type="checkbox" name="premium1" value="8960"><label class="rvpValor" for="tnt">Tnt $8.960---------></label>
+        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4480"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="tnta" type="checkbox" name="premium2" value="9880"><label class="rvpValor" for="tnta">Tnt $9.880---------></label>
+        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4940"><label class="rvpEspacio" for="rvp2">50%</label><br>
+        <input id="tntv" type="checkbox" name="premium3" value="10580"><label for="tntv">Tnt Dig. $10.580-></label>
+        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5290"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
+        <input id="tnthd" type="checkbox" name="premium4" value="12790"><label for="tnthd">Tnt HD $12.790--></label>
+        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-6395"><label class="rvpEspacio" for="rvp4">50%</label> <br>
+        <input id="tnthdn" type="checkbox" name="premium5" value="13710"><label for="tnthdn">Tnt HD $13.710--></label>
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-6855"><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input id="hbo" type="checkbox" name="premium6" value="8960"><label for="hbo">Hbo-----------------></label>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4480"><label class="rvpEspacio" for="rvp6">50%</label> <br>
+        <input id="universal" type="checkbox" name="premium7" value="8960"><label for="universal">Universal----------></label> 
+        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4480"><label class="rvpEspacio" for="rvp7">50%</label> <br>
+        <input id="Paramount" type="checkbox" name="premium15" value="3450"><label for="Paramount">Paramount+</label> <br>
         <input id="combo2" type="checkbox" name="premium8" value="10500"><label for="combo2">Combo $10.500</label><br>
         <input id="star+" type="checkbox" name="premium9" value="8500"><label for="star+">Star+ $8.500</label> <br>
         <input id="disney" type="checkbox" name="premium10" value="6500"><label for="disney">Disney $6.500</label> <br>
-        <input id="foxsport" type="checkbox" name="premium11" value="10450"><label for="foxsport">Fox Sport----------></label>
-        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-5225"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="hotpack" type="checkbox" name="premium12" value="9050"><label for="hotpack">Hot Pack-----------></label>
-        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-4525"><label class="rvpEspacio" for="rvp9">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium13" value="9050"><label for="exxotico">Exxotico-----------></label>
-        <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4525"><label class="rvpEspacio" for="rvp10">50%</label> <br>
-        <input id="full" type="checkbox" name="premium14" value="1610"><label for="full">Full Service-------></label>
-        <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-805"><label class="rvpEspacio" for="rvp11">50%</label> <br>
+        <input id="foxsport" type="checkbox" name="premium11" value="11280"><label for="foxsport">Fox Sport----------></label>
+        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-5640"><label class="rvpEspacio" for="rvp8">50%</label> <br>
+        <input id="hotpack" type="checkbox" name="premium12" value="9770"><label for="hotpack">Hot Pack-----------></label>
+        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-4885"><label class="rvpEspacio" for="rvp9">50%</label> <br>
+        <input id="exxotico" type="checkbox" name="premium13" value="9770"><label for="exxotico">Exxotico-----------></label>
+        <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4885"><label class="rvpEspacio" for="rvp10">50%</label> <br>
+        <input id="full" type="checkbox" name="premium14" value="1730"><label for="full">Full Service-------></label>
+        <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-865"><label class="rvpEspacio" for="rvp11">50%</label> <br>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
@@ -121,14 +121,14 @@
     <input id="rvo12" type="radio" name="rvo" value="-14000"><label for="rvo12">$14.000</label><br>
     <input id="rvo13" type="radio" name="rvo" value="-16000"><label for="rvo13">$16.000</label><br>
     <input id="rvo15" type="radio" name="rvo" value="-22000"><label for="rvo15">$22.000</label><br>
-    <input id="rvo14" type="checkbox" name="rvoEquipo" value="-2050"><label for="rvo14">50% deco Adicional</label><br>
+    <input id="rvo14" type="checkbox" name="rvoEquipo" value="-2210"><label for="rvo14">50% deco Adicional</label><br>
     <input id="rvo16" type="text" name="rvoExtra" value="" class="Extra"><label for="rvo16">Ingresa un descuento</label>
     </div>
     <div class="c6">
       <h4 class="extras">Extras</h4>
       <hr class="extras">
       <input id="recargo" type="checkbox" name="recargo" value="1600"><label class="rvpValor" for="recargo">Recargo x mora $1.600</label><br>
-      <input id="tntflex" type="checkbox" name="tntflex" value="3550"><label class="rvpValor" for="tntflex">Tnt flexible $3.550</label><br>
+      <input id="tntflex" type="checkbox" name="tntflex" value="3830"><label class="rvpValor" for="tntflex">Tnt flexible $3.830</label><br>
       <input id="deco" type="checkbox" name="deco" value="29990"><label class="rvpValor" for="deco">Deco Adicional $29.990</label><br>
       <input id="cambio" type="checkbox" name="cambio" value="15990"><label class="rvpValor" for="cambio">Cambio lugar deco/antena $15.990</label><br>
       <input id="recableado" type="checkbox" name="recableado" value="13990"><label class="rvpValor" for="recableado">Recableado $13.990</label><br>
@@ -221,8 +221,8 @@
         <input id="pro4" type="checkbox" name="pro4" value="Hbo "><label class="rvp" for="pro4">Hbo</label>
         <input id="pro5" type="checkbox" name="pro5" value="Universal "><label class="rvp" for="pro5">Universal</label>
         <input id="pro6" type="checkbox" name="pro6" value="Hot Pack "><label class="rvp" for="pro6">Hot Pack</label><br>
-        <input id="pro7" type="checkbox" name="pro7" value="Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta. "><label class="rvp" for="pro7">Quiero un deco adicional, acepta 29990 por instalacion + 4100 deco adicional en proxima boleta</label><br>
-        <input id="pro8" type="checkbox" name="pro8" value="Acepta full service primero 2 meses $805, siguientes meses $1610. "><label class="rvp" for="pro8">Acepta full service primero 2 meses $805, siguientes meses $1610</label><br>
+        <input id="pro7" type="checkbox" name="pro7" value="Quiero un deco adicional, acepta 29990 por instalacion + 4420 deco adicional en proxima boleta. "><label class="rvp" for="pro7">Quiero un deco adicional, acepta 29990 por instalacion + 4420 deco adicional en proxima boleta</label><br>
+        <input id="pro8" type="checkbox" name="pro8" value="Acepta full service primero 2 meses $865, siguientes meses $1730. "><label class="rvp" for="pro8">Acepta full service primero 2 meses $865, siguientes meses $1730</label><br>
         <input id="pro9" type="checkbox" name="pro9" value="Quiero comprar PPV, se activa PPV por $2990. "><label class="rvp" for="pro9">Quiero comprar PPV, se activa PPV por $2990</label><br>
         <label for="" class="tituloCopy">Tst</label><br>
         <input id="tst" type="checkbox" name="tst" value="Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio. "><label class="rvp" for="tst">Quiero realizar la mudanza de mi servicio, se genera orden para mudar el servicio</label><br>
