--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4885"><label class="rvpEspacio" for="rvp10">50%</label> <br>
         <input id="full" type="checkbox" name="premium14" value="1730"><label for="full">Full Service-------></label>
         <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-865"><label class="rvpEspacio" for="rvp11">50%</label> <br>
+        <p class="importante">IMPORTANTE</p>
+        <P class="enlace">Ruta nueva calculadora en Insite: Menu Mis Gestiones - Herramientas - Aplicativos - Calculadora</P>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
