--- a/index.html
+++ b/index.html
@@ -41,26 +41,37 @@
     <h4 class="nuevos">Clientes Nuevos</h4>
     <hr class="nuevos">
     
-    <input id="pplatahd" type="radio" name="plan" value="31250" accesskey="p"><label for="pplatahd">Plan Plata HD</label> <br>
-    <input id="porohd" type="radio" name="plan" value="36770" accesskey="o"><label for="porohd">Plan Oro HD</label> <br>
-    <input id="poroplus" type="radio" name="plan" value="41920"><label for="poroplus">Plan Oro Plus HD</label> <br>
-    <input id="oro4k" type="radio" name="plan" value="46720"><label for="oro4k">Plan Oro 4K</label> <br>
+    <input id="pplatahd" type="radio" name="plan" value="31250" accesskey="p"><label for="pplatahd">Plan Plata HD</label> 
+    <input id="pplatahdCombo" type="radio" name="plan" value="34490" class="planEspacio"><label for="pplatahdCombo" class="nuevoEspacio">Plata Combo</label> <br>
+    <input id="porohd" type="radio" name="plan" value="36770" accesskey="o"><label for="porohd">Plan Oro HD</label> 
+    <input id="porohdCombo" type="radio" name="plan" value="38930" class="planEspacio"><label for="porohdCombo" class="nuevoEspacio">Oro HD Combo</label><br>
+    <input id="poroplus" type="radio" name="plan" value="41920"><label for="poroplus">Plan Oro Plus HD</label> 
+    <input id="poroplusCombo" type="radio" name="plan" value="44080" class="planEspacio"><label for="poroplusCombo" class="nuevoEspacio">Oro Plus Combo</label> <br>
+    <input id="oro4k" type="radio" name="plan" value="46720"><label for="oro4k">Plan Oro 4K</label> 
+    <input id="oro4kCombo" type="radio" name="plan" value="48880" class="planEspacio"><label for="oro4kCombo" class="nuevoEspacio">Oro 4K Combo</label> <br>
     <input id="broncelite" type="radio" name="plan" value="23330"><label for="broncelite">Plan Bronce Lite</label> <br>
     <input id="broncehdn" type="radio" name="plan" value="21580"><label for="broncehdn">Plan Bronce HD</label><br>
-    <input id="platacombo" type="radio" name="plan" value="34490"><label for="platacombo">Plan Plata Combo Plus</label> <br>
-    <input id="orocombo" type="radio" name="plan" value="38930"><label for="orocombo">Plan Oro Combo Plus</label>
+    
     </div>  
     <div class="c2">
     <h4 class="cartera">Clientes Cartera</h4>
     <hr class="cartera">
-    <input id="bronce" type="radio" name="plan" value="28260"><label for="bronce">Pack Bronce</label> <br>
-    <input id="broncehd" type="radio" name="plan" value="31250"><label for="broncehd">Pack Bronce HD</label> <br>
-    <input id="plata" type="radio" name="plan" value="37220"><label for="plata" >Pack Plata</label> <br>
-    <input id="platahd" type="radio" name="plan" value="40210"><label for="platahd">Pack Plata HD</label> <br> 
-    <input id="orosd" type="radio" name="plan" value="42740"><label for="orosd">Pack Oro</label> <br>
-    <input id="orohd" type="radio" name="plan" value="45730"><label for="orohd">Pack Oro HD</label> <br>
-    <input id="oroplus" type="radio" name="plan" value="46670"><label for="oroplus">Pack Oro Plus</label> <br>
+    <input id="bronce" type="radio" name="plan" value="28260"><label for="bronce">Pack Bronce</label> 
+    <input id="bronceCombo" type="radio" name="plan" value="31500" class="espacio"><label for="bronceCombo" class="packEspacio">Bronce Combo</label> <br>
+    <input id="broncehd" type="radio" name="plan" value="31250"><label for="broncehd">Pack Bronce HD</label>
+    <input id="broncehdCombo" type="radio" name="plan" value="34490" class="espaciob"><label for="broncehdCombo" class="packEspaciob">Bronce HD Combo</label>  <br>
+    <input id="plata" type="radio" name="plan" value="37220"><label for="plata" >Pack Plata</label>
+    <input id="plataCombo" type="radio" name="plan" value="40460" class="espaciop"><label for="plataCombo" class="packEspaciop">Plata Combo</label> <br>
+    <input id="platahd" type="radio" name="plan" value="40210"><label for="platahd">Pack Plata HD</label>
+    <input id="platahdCombo" type="radio" name="plan" value="43450" class="espacioph"><label for="platahdCombo" class="packEspacioph">Plata HD Combo</label> <br> 
+    <input id="orosd" type="radio" name="plan" value="42740"><label for="orosd">Pack Oro</label> 
+    <input id="orosdCombo" type="radio" name="plan" value="44900" class="espacioo"><label for="orosdCombo" class="packEspacioo">Oro Combo</label> <br>
+    <input id="orohd" type="radio" name="plan" value="45730"><label for="orohd">Pack Oro HD</label> 
+    <input id="orohdCombo" type="radio" name="plan" value="47890" class="espaciooh"><label for="orohdCombo" class="packEspaciooh">Oro HD Combo</label> <br>
+    <input id="oroplus" type="radio" name="plan" value="46670"><label for="oroplus">Pack Oro Plus</label> 
+    <input id="oroplusCombo" type="radio" name="plan" value="48830" class="espacioop"><label for="oroplusCombo" class="packEspacioop">Oro Plus Combo</label> <br>
     <input id="oroplushd" type="radio" name="plan" value="50290"><label for="oroplushd">Plack Oro Plus Hd</label>
+    <input id="oroplushdCombo" type="radio" name="plan" value="52450" class="espaciooph"><label for="oroplushdCombo" class="packEspaciooph">Oro Plus Hd Combo</label>
     </div>  
    
     <div class="c3">
