--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <hr class="nuevos">
     
     <input id="pplatahd" type="radio" name="plan" value="31250" accesskey="p"><label for="pplatahd">Plan Plata HD</label> 
-    <input id="pplatahdCombo" type="radio" name="plan" value="34490" class="planEspacio"><label for="pplatahdCombo" class="nuevoEspacio">Plata Combo</label> <br>
+    <input id="pplatahdCombo" type="radio" name="plan" value="34490" class="planEspacio"><label for="pplatahdCombo" class="nuevoEspacio">Plan Plata Combo</label> <br>
     <input id="porohd" type="radio" name="plan" value="36770" accesskey="o"><label for="porohd">Plan Oro HD</label> 
-    <input id="porohdCombo" type="radio" name="plan" value="38930" class="planEspacio"><label for="porohdCombo" class="nuevoEspacio">Oro HD Combo</label><br>
+    <input id="porohdCombo" type="radio" name="plan" value="38930" class="planEspacio"><label for="porohdCombo" class="nuevoEspacio">Plan Oro HD Combo</label><br>
     <input id="poroplus" type="radio" name="plan" value="41920"><label for="poroplus">Plan Oro Plus HD</label> 
-    <input id="poroplusCombo" type="radio" name="plan" value="44080" class="planEspacio"><label for="poroplusCombo" class="nuevoEspacio">Oro Plus Combo</label> <br>
+    <input id="poroplusCombo" type="radio" name="plan" value="44080" class="planEspacio"><label for="poroplusCombo" class="nuevoEspacio">Plan Oro Plus Combo</label> <br>
     <input id="oro4k" type="radio" name="plan" value="46720"><label for="oro4k">Plan Oro 4K</label> 
-    <input id="oro4kCombo" type="radio" name="plan" value="48880" class="planEspacio"><label for="oro4kCombo" class="nuevoEspacio">Oro 4K Combo</label> <br>
+    <input id="oro4kCombo" type="radio" name="plan" value="48880" class="planEspacio"><label for="oro4kCombo" class="nuevoEspacio">Plan Oro 4K Combo</label> <br>
     <input id="broncelite" type="radio" name="plan" value="23330"><label for="broncelite">Plan Bronce Lite</label> <br>
     <input id="broncehdn" type="radio" name="plan" value="21580"><label for="broncehdn">Plan Bronce HD</label><br>
     
