se cambian premium

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       <div class="c4">
         <h4 class="premium">Paquetes Premium</h4>
         <hr class="premium">
-        <input id="tnt" type="checkbox" name="premium1" value="8960"><label class="rvpValor" for="tnt">Tnt $8.960---------></label>
-        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-4480"><label class="rvpEspacio" for="rvp1">50%</label><br>
-        <input id="tnta" type="checkbox" name="premium2" value="9880"><label class="rvpValor" for="tnta">Tnt $9.880---------></label>
-        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-4940"><label class="rvpEspacio" for="rvp2">50%</label><br>
-        <input id="tntv" type="checkbox" name="premium3" value="10580"><label for="tntv">Tnt Dig. $10.580-></label>
-        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-5290"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
+        <input id="hbo" type="checkbox" name="premium1" value="610"><label class="rvpValor" for="hbo">Hbo ---------></label>
+        <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-305"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="hotpack" type="checkbox" name="premium2" value="659"><label class="rvpValor" for="hotpack">Hot Pack ---------></label>
+        <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-329"><label class="rvpEspacio" for="rvp2">50%</label><br>
+        <input id="play" type="checkbox" name="premium3" value="384"><label for="play">Play Boy-></label>
+        <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-192"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
         <input id="tnthd" type="checkbox" name="premium4" value="12790"><label for="tnthd">Tnt HD $12.790--></label>
         <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-6395"><label class="rvpEspacio" for="rvp4">50%</label> <br>
         <input id="tnthdn" type="checkbox" name="premium5" value="13710"><label for="tnthdn">Tnt HD $13.710--></label>
@@ -112,8 +112,6 @@
         <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4885"><label class="rvpEspacio" for="rvp10">50%</label> <br>
         <input id="full" type="checkbox" name="premium14" value="1730"><label for="full">Full Service-------></label>
         <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-865"><label class="rvpEspacio" for="rvp11">50%</label> <br>
-        <p class="importante">IMPORTANTE</p>
-        <P class="enlace">Ruta nueva calculadora en Insite: Menu Mis Gestiones - Herramientas - Aplicativos - Calculadora</P>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
